fix: wrong banner styles on mobile

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -152,20 +152,21 @@
             transform: translateY(-216px);
         }
         .about {
-            bottom: 50px;
+            bottom: 42px;
             &-borrow {
                 padding: 0 24px;
                 &-title {
-                    font-size: 28px;
+                    font-size: 26px;
                     line-height: 72px;
                 }
                 &-item {
-                    font-size: 22px;
+                    font-size: 20px;
                     line-height: 40px;
+                    font-weight: 400;
                 }
             }
             &-copyright {
-                margin-top: 102px;
+                margin-top: 96px;
                 &-item {
                     font-size: 14px;
                 }
